[workspace]
members = [
  "nodes/safety_watchdog",
  "nodes/sensor_filter",
  "apps/teleop_mux",
]
resolver = "3"

[workspace.dependencies]
r2r = "0.9.5"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
