[package]
name = "rust-ros2-microstack"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
r2r = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"

[workspace]
members = [
  "nodes/safety_watchdog",
  "nodes/sensor_filter",
  "apps/teleop_mux",
]
resolver = "3"

[workspace.dependencies]
r2r = "0.9.5"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["default"] }
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
